--- a/vagrant/config/vagrant-local.example.yml
+++ b/vagrant/config/vagrant-local.example.yml
@@ -1,5 +1,5 @@
 # Your personal GitHub token
-github_token: <your-personal-github-token>
+github_token: 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
 # Read more: https://github.com/blog/1509-personal-api-tokens
 # You can generate it here: https://github.com/settings/tokens
 
